# hrgs-purification-scheduler

./: .gitignore  README.md  pyproject.toml
desktop_app/: .gitignore  README.md  app.py  build_executable.sh  controller.py
docs/: CLI Command Reference.md  Fig6 Rate Ratio Non-Reproducibility.md  Handoff_Timing_and_Pumping_Visualization.md  Internship Progression Tracker.md  Optimality Scope.md  Outer Loop Search Design.md  Repository State & Progress.md  Research Idea Description.md  Roadmap Remaining Work.md  Validated Formal Model Def.md
docs/archive/: Handoff_Integrate_Pumping_Into_Search.md  Roadmap_Derisk_and_Reframe.md  Roadmap_Derisk_and_Reframe_Results.md  WbW Plan.md
experiments/: _finish_min_budget_vs_n.py  excluded_move_at_scale.py  fig5_fidelity_vs_noise.py  fig6_rate_ratio.py  load_schedule.py  optimality_gap_example.py  search_results.py  sweep_beam_width.py  sweep_ed.py  sweep_hop_count.py  sweep_min_budget_vs_ed.py  sweep_min_budget_vs_n.py  sweep_timing_with_pumping.py  visualize_pumping_schedule.py
outputs/: README.md
tests/: test_backbone.py  test_brute_force.py  test_cost_functions.py  test_dag.py  test_dp.py  test_error_vector.py  test_evaluator.py  test_heuristic.py  test_network_config.py  test_purification.py  test_resource_budget.py  test_serde.py  test_stage.py  test_state.py  test_validation_regression.py  test_visualize.py
thesis/: Makefile  README.md  main.tex
validation/: _finish_min_budget_vs_n.py  excluded_move_at_scale.py  fig5_fidelity_vs_noise.py  fig6_rate_ratio.py  load_schedule.py  optimality_gap_example.py  search_results.py  sweep_beam_width.py  sweep_ed.py  sweep_hop_count.py  sweep_min_budget_vs_ed.py  sweep_min_budget_vs_n.py  sweep_timing_with_pumping.py  visualize_pumping_schedule.py
(+68 files in other folders)
