[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hrgs-scheduler"
version = "0.1.0"
description = "Simulator and optimizer for purification scheduling on HRGS-based quantum repeaters"
requires-python = ">=3.11"
dependencies = []   # pure-stdlib for the inner loop; numpy/matplotlib added later

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
