[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "entanglement-purification-scheduler"
version = "0.1.0"
description = "Simulator and optimizer for entanglement purification scheduling on half-RGS-based quantum repeaters"
requires-python = ">=3.11"
dependencies = []   # pure-stdlib for the inner loop; matplotlib is opt-in (see [plotting])

[project.optional-dependencies]
dev = ["pytest>=7.0"]
plotting = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
